# gtk4_list_weather

./: README.md  meson.build
resources/: github.aeldemery.gtk4_list_weather.gresource.xml  meson.build
resources/builddir/meson-logs/: meson-log.txt
source/: Main.vala  MainWindow.vala  SvgPaintable.vala  WeatherInfo.vala  WeatherListModel.vala  meson.build
